docs:update style

--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 @font-face {
     font-family: Roboto;
-    src: url("assets1/fonts/Roboto-Light.ttf");
+    src: url("D:/myCV/assets1/fonts/Roboto-Light.ttf");
     font-weight: 100;
 }
 @font-face {
     font-family: Roboto;
-    src: url("assets1/fonts/Roboto-Thin.ttf");
+    src: url("D:/myCV/assets1/fonts/Roboto-Thin.ttf");
     font-weight: 300;
 }
 * {
@@ -41,7 +41,7 @@ body {
   align-items: center;
 }
 html {
-  scroll-behavior: smooth; 
+  scroll-behavior: smooth;
 }
 .nav-list {
   list-style: none;
@@ -65,7 +65,7 @@ a {
   position: relative;
 }
 
-a::after { 
+a::after {
   content: "";
   position: absolute;
   bottom: 0;
@@ -76,9 +76,9 @@ a::after {
   transition: width 0.3s ease 0s, left 0.3s ease 0s;
 }
 
-a:hover::after { 
-  width: 100%; 
-  left: 0; 
+a:hover::after {
+  width: 100%;
+  left: 0;
 }
 
 .section {
@@ -93,7 +93,7 @@ a:hover::after {
   }
 }
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto';
   font-size: 18px;
   font-weight: 500;
   line-height: 1.5;
@@ -108,7 +108,7 @@ h1 {
   text-transform: uppercase;
   letter-spacing: 5px;
 }
-h1::after { 
+h1::after {
   content: "";
   position: absolute;
   bottom: -10px;
@@ -132,7 +132,7 @@ hr {
 	border-top: 20px solid #D7D1C9;
 }
 .section-title {
-  margin-bottom: 20px;  
+  margin-bottom: 20px;
   margin-left: 20px;
   font-size: 20px;
   font-weight: 400;
@@ -180,7 +180,7 @@ hr {
   height:80px;
   width: 100%;
   background-color: #829985;
-  padding: 20px;  
+  padding: 20px;
 }
 
 .footer-container {
