--- a/style.css
+++ b/style.css
@@ -93,9 +93,9 @@ a:hover::after {
   }
 }
 body {
-  font-family: 'Roboto';
+  font-family: 'Roboto' sans-serif;
   font-size: 18px;
-  font-weight: 500;
+  font-weight: 300;
   line-height: 1.5;
   color: #4d2323;
 }
