--- a/style.css
+++ b/style.css
@@ -92,6 +92,12 @@ a:hover::after {
     width: 100%
   }
 }
+@media (max-width: 320px) {
+  .section  {
+    width: 100%
+  }
+}
+
 body {
   font-family: 'Roboto' sans-serif;
   font-size: 18px;
@@ -119,7 +125,7 @@ h1::after {
   background:#829985;
 }
 h2 {
-  margin-left: -45px;
+  margin-left: -30px;
   letter-spacing: 3px;
   color: #829985;
 }
@@ -149,6 +155,7 @@ hr {
 }
 
 .section-item a {
+  margin-right: 15px;
   text-decoration: none;
   color: #829985;
   transition: color 0.5s;
@@ -160,11 +167,15 @@ hr {
 
 .contacts-item a {
   letter-spacing: 0px;
-  font-family: 'Roboto';
-  font-weight: 500;
+  font-family: 'Roboto' sans-serif;
+  font-weight: 300;
 }
 .section-item a {
   line-height: 1px;
+  font-family: 'Roboto' sans-serif;
+  font-size: 18px;
+  line-height: 0;
+  font-weight: 300;
 }
 .section-education,
 .section-english {
